Default namespace in html:style was HTML by default; b=72302, r=peterv, sr=attinasi